Fixed Text Align on Game Instructions

--- a/index.css
+++ b/index.css
@@ -49,6 +49,7 @@ li{
 
 .instructions-content{
   margin-bottom: 20px;
+  text-align: left;
 }
 
 .popup-body{
